# zbar-cmake

./: .gitignore  CMakeLists.txt  README  tmp.py
android/libiconv/arm64-v8a/: Makefile  config.h  config.status  libtool
android/libiconv/arm64-v8a/lib/: Makefile  config.h  libcharset.la  libiconv.la
android/libiconv/arm64-v8a/lib/.libs/: libiconv.lai
android/libiconv/arm64-v8a/libcharset/: Makefile  config.h  config.status  libtool
android/libiconv/arm64-v8a/libcharset/lib/: Makefile  libcharset.la
android/libiconv/arm64-v8a/man/: Makefile
android/libiconv/arm64-v8a/po/: Makefile  Makefile.in
android/libiconv/arm64-v8a/src/: Makefile  iconv_no_i18n
android/libiconv/arm64-v8a/src/.libs/: iconv_no_i18n
android/libiconv/arm64-v8a/srclib/: Makefile  stdint.h
android/libiconv/arm64-v8a/tests/: Makefile
android/libiconv/armeabi-v7a/: Makefile  config.h  config.status  libtool
android/libiconv/armeabi-v7a/install/lib/: libcharset.la  libiconv.la
android/libiconv/armeabi-v7a/lib/: Makefile  config.h  libiconv.la
android/libiconv/armeabi-v7a/libcharset/: Makefile  config.h  config.status  libtool
android/libiconv/armeabi-v7a/libcharset/lib/: Makefile  libcharset.la
android/libiconv/armeabi-v7a/man/: Makefile
android/libiconv/armeabi-v7a/po/: Makefile  Makefile.in
android/libiconv/armeabi-v7a/src/: Makefile  iconv  iconv_no_i18n
android/libiconv/armeabi-v7a/src/.libs/: iconv_no_i18n
android/libiconv/armeabi-v7a/srclib/: Makefile
android/libiconv/armeabi-v7a/tests/: Makefile
android/libiconv/x86/: Makefile  config.h  config.status  libtool
android/libiconv/x86/install/lib/: libcharset.la  libiconv.la
android/libiconv/x86/lib/: Makefile  config.h  libiconv.la
android/libiconv/x86/libcharset/: Makefile  config.h  config.status  libtool
android/libiconv/x86/libcharset/lib/: Makefile  libcharset.la
android/libiconv/x86/man/: Makefile
android/libiconv/x86/po/: Makefile  Makefile.in  POTFILES
android/libiconv/x86/src/: Makefile  iconv  iconv_no_i18n
android/libiconv/x86/src/.libs/: iconv_no_i18n
android/libiconv/x86/srclib/: Makefile
android/libiconv/x86/tests/: Makefile
android/libiconv/x86_64/: Makefile  config.h  config.status  libtool
android/libiconv/x86_64/lib/: Makefile  config.h  libiconv.la
android/libiconv/x86_64/lib/.libs/: libiconv.lai
android/libiconv/x86_64/libcharset/: Makefile  config.h  config.status  libtool
android/libiconv/x86_64/libcharset/lib/: Makefile  libcharset.la
android/libiconv/x86_64/libcharset/lib/.libs/: libcharset.lai
android/libiconv/x86_64/man/: Makefile
android/libiconv/x86_64/po/: Makefile  Makefile.in
android/libiconv/x86_64/src/: Makefile  iconv  iconv_no_i18n
android/libiconv/x86_64/src/.libs/: iconv_no_i18n
android/libiconv/x86_64/srclib/: Makefile  stdint.h
android/libiconv/x86_64/tests/: Makefile
android/libjpeg/arm64-v8a/: Makefile  cjpeg  config.status  djpeg  jpegtran  libjpeg.la  libjpeg.pc  libtool  wrjpgcom
android/libjpeg/arm64-v8a/.deps/: cdjpeg.Po  cjpeg.Po  djpeg.Po  jaricom.Plo  jcapimin.Plo  jcapistd.Plo  jcarith.Plo  jccoefct.Plo  jccolor.Plo  jcdctmgr.Plo  jchuff.Plo  jcinit.Plo  jcmainct.Plo  jcmarker.Plo  jcmaster.Plo  jcomapi.Plo  jcparam.Plo  jcprepct.Plo  jcsample.Plo  jctrans.Plo  jdapimin.Plo  jdapistd.Plo  jdarith.Plo  jdatadst.Plo  jdatasrc.Plo  jdcoefct.Plo  jdcolor.Plo  jddctmgr.Plo  jdhuff.Plo  jdinput.Plo  jdmainct.Plo  jdmarker.Plo  jdmaster.Plo  jdmerge.Plo  jdpostct.Plo  jdsample.Plo  jdtrans.Plo  jerror.Plo  jfdctflt.Plo  jfdctfst.Plo  (+25 more)
android/libjpeg/arm64-v8a/.libs/: cjpeg  libjpeg.lai
android/libjpeg/armeabi-v7a/: Makefile  cjpeg  config.status  djpeg  jpegtran  libjpeg.la  libtool  rdjpgcom
android/libjpeg/armeabi-v7a/.deps/: cdjpeg.Po  cjpeg.Po  djpeg.Po  jaricom.Plo  jcapimin.Plo  jcapistd.Plo  jcarith.Plo  jccoefct.Plo  jccolor.Plo  jcdctmgr.Plo  jchuff.Plo  jcinit.Plo  jcmainct.Plo  jcmarker.Plo  jcmaster.Plo  jcomapi.Plo  jcparam.Plo  jcprepct.Plo  jcsample.Plo  jctrans.Plo  jdapimin.Plo  jdapistd.Plo  jdarith.Plo  jdatadst.Plo  jdatasrc.Plo  jdcoefct.Plo  jdcolor.Plo  jddctmgr.Plo  jdhuff.Plo  jdinput.Plo  jdmainct.Plo  jdmarker.Plo  jdmaster.Plo  jdmerge.Plo  jdpostct.Plo  jdsample.Plo  jdtrans.Plo  jerror.Plo  jfdctflt.Plo  jfdctfst.Plo  (+25 more)
android/libjpeg/armeabi-v7a/.libs/: jpegtran
android/libjpeg/armeabi-v7a/install/lib/: libjpeg.la
android/libjpeg/armeabi-v7a/install/lib/pkgconfig/: libjpeg.pc
android/libjpeg/x86/: Makefile  cjpeg  config.status  djpeg  jpegtran  libjpeg.la  libjpeg.pc  libtool
android/libjpeg/x86/.deps/: cdjpeg.Po  cjpeg.Po  djpeg.Po  jaricom.Plo  jcapimin.Plo  jcapistd.Plo  jcarith.Plo  jccoefct.Plo  jccolor.Plo  jcdctmgr.Plo  jchuff.Plo  jcinit.Plo  jcmainct.Plo  jcmarker.Plo  jcmaster.Plo  jcomapi.Plo  jcparam.Plo  jcprepct.Plo  jcsample.Plo  jctrans.Plo  jdapimin.Plo  jdapistd.Plo  jdarith.Plo  jdatadst.Plo  jdatasrc.Plo  jdcoefct.Plo  jdcolor.Plo  jddctmgr.Plo  jdhuff.Plo  jdinput.Plo  jdmainct.Plo  jdmarker.Plo  jdmaster.Plo  jdmerge.Plo  jdpostct.Plo  jdsample.Plo  jdtrans.Plo  jerror.Plo  jfdctflt.Plo  jfdctfst.Plo  (+25 more)
android/libjpeg/x86/.libs/: djpeg  jpegtran  libjpeg.lai
android/libjpeg/x86_64/: Makefile  cjpeg  config.status  djpeg  jpegtran  libjpeg.la  libtool
android/libjpeg/x86_64/.deps/: cdjpeg.Po  cjpeg.Po  djpeg.Po  jaricom.Plo  jcapimin.Plo  jcapistd.Plo  jcarith.Plo  jccoefct.Plo  jccolor.Plo  jcdctmgr.Plo  jchuff.Plo  jcinit.Plo  jcmainct.Plo  jcmarker.Plo  jcmaster.Plo  jcomapi.Plo  jcparam.Plo  jcprepct.Plo  jcsample.Plo  jctrans.Plo  jdapimin.Plo  jdapistd.Plo  jdarith.Plo  jdatadst.Plo  jdatasrc.Plo  jdcoefct.Plo  jdcolor.Plo  jddctmgr.Plo  jdhuff.Plo  jdinput.Plo  jdmainct.Plo  jdmarker.Plo  jdmaster.Plo  jdmerge.Plo  jdpostct.Plo  jdsample.Plo  jdtrans.Plo  jerror.Plo  jfdctflt.Plo  jfdctfst.Plo  (+25 more)
android/libjpeg/x86_64/.libs/: jpegtran  libjpeg.lai
android/libjpeg/x86_64/install/lib/pkgconfig/: libjpeg.pc
include/: config.h.in
